[gd_scene load_steps=8 format=3 uid="uid://ddnfe8q2l6adh"]

[ext_resource type="Script" uid="uid://c6mkqkqlpd85g" path="res://scripts/config.gd" id="1_d4hfg"]
[ext_resource type="PackedScene" uid="uid://dqbsyjm472g3s" path="res://components/header.tscn" id="2_5ce7h"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="3_bm1gy"]
[ext_resource type="PackedScene" uid="uid://dtcl56kq2beg1" path="res://components/nav_bar.tscn" id="4_shhe8"]

[sub_resource type="ButtonGroup" id="ButtonGroup_7d1r7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6og1j"]
bg_color = Color(1, 0, 0.505882, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.295867, 0.295866, 0.295866, 0.6)
shadow_size = 10
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_txrv4"]
font_size = 50
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.243137)
shadow_offset = Vector2(3, 3)

[node name="Config" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4hfg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header2" parent="VBoxContainer" instance=ExtResource("2_5ce7h")]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_bm1gy")

[node name="TopContainer" type="MarginContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.85
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/Control/TopContainer"]
layout_mode = 2
current_tab = 0

[node name="WallContainer" type="ScrollContainer" parent="VBoxContainer/Control/TopContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="IPContainer" type="HBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LabelIP" type="Label" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/IPContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
text = "Wall IP"

[node name="LineEditIP" type="LineEdit" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/IPContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("3_bm1gy")

[node name="GradeContainer" type="HBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LabelGradeSystem" type="Label" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/GradeContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
text = "Grade system"

[node name="CheckBoxFont" type="CheckBox" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/GradeContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
button_group = SubResource("ButtonGroup_7d1r7")
text = "Font"

[node name="CheckBoxHueco" type="CheckBox" parent="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/GradeContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
button_group = SubResource("ButtonGroup_7d1r7")
text = "Hueco (V)"

[node name="DataSourceContainer" type="ScrollContainer" parent="VBoxContainer/Control/TopContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="ProviderContainer" type="HBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ProviderLabel" type="Label" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ProviderContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
text = "Data Source"

[node name="ProviderOptionButton" type="OptionButton" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ProviderContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Local"
popup/item_0/id = 0
popup/item_1/text = "Cloud"
popup/item_1/id = 1

[node name="ConnectionContainer" type="VBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50

[node name="URLContainer" type="HBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="URLLabel" type="Label" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer/URLContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
text = "URL"

[node name="URLLineEdit" type="LineEdit" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer/URLContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="UserContainer" type="HBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="UserLabel" type="Label" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer/UserContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
text = "User"

[node name="UserLineEdit" type="LineEdit" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer/UserContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="PasswordContainer" type="HBoxContainer" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PasswordLabel" type="Label" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer/PasswordContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
text = "Password"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ConnectionContainer/PasswordContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
secret = true

[node name="BottomContainer" type="MarginContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/BottomContainer"]
layout_mode = 2

[node name="LabelContainer" type="CenterContainer" parent="VBoxContainer/Control/BottomContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="OkLabel" type="Label" parent="VBoxContainer/Control/BottomContainer/VBoxContainer/LabelContainer"]
layout_mode = 2
theme = ExtResource("3_bm1gy")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveContainer" type="CenterContainer" parent="VBoxContainer/Control/BottomContainer/VBoxContainer"]
layout_mode = 2

[node name="SavePanel" type="Panel" parent="VBoxContainer/Control/BottomContainer/VBoxContainer/SaveContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6og1j")

[node name="SaveLabel" type="Label" parent="VBoxContainer/Control/BottomContainer/VBoxContainer/SaveContainer/SavePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -25.5
offset_right = 41.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Save"
label_settings = SubResource("LabelSettings_txrv4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("4_shhe8")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/GradeContainer/CheckBoxFont" to="." method="_on_check_box_font_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/TopContainer/TabContainer/WallContainer/MarginContainer/VBoxContainer/GradeContainer/CheckBoxHueco" to="." method="_on_check_box_hueco_pressed"]
[connection signal="item_selected" from="VBoxContainer/Control/TopContainer/TabContainer/DataSourceContainer/MarginContainer/VBoxContainer/ProviderContainer/ProviderOptionButton" to="." method="_on_option_button_data_source_item_selected"]
[connection signal="gui_input" from="VBoxContainer/Control/BottomContainer/VBoxContainer/SaveContainer/SavePanel" to="." method="_on_panel_save_gui_input"]
